--- a/src/sass/components/innovation.scss
+++ b/src/sass/components/innovation.scss
@@ -9,7 +9,7 @@
     width: 100%;
 
     &__container {
-        padding: 0 2rem;
+        padding: 0 1rem;
         position: relative;
         top: 50%;
         transform: translateY(-50%);
@@ -101,6 +101,7 @@
             height: 100%;
             margin: 0 auto;
             max-width: $screen-normal;
+            padding: 0 2rem;
             top: 0;
             transform: none;
             width: 100%;
